--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,34 +1,43 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-	<div class="container-fluid">
-		<a class="navbar-brand" href="/">Home</a>
-		<button
-			class="navbar-toggler"
-			type="button"
-			data-bs-toggle="collapse"
-			data-bs-target="#navbarNavAltMarkup"
-			aria-controls="navbarNavAltMarkup"
-			aria-expanded="false"
-			aria-label="Toggle navigation"
-		>
-			<span class="navbar-toggler-icon"></span>
-		</button>
-		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-			<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-				<li class="nav-item"><a class="nav-link" href="/about">About</a></li>
-				<li class="nav-item">
-					<a class="nav-link" href="/culture">Cultures</a>
-				</li>
-				<li class="nav-item"><a class="nav-link" href="/account">User</a></li>
-				<li class="nav-item">
-					<a class="nav-link" href="/contact">Contact</a>
-				</li>
-			</ul>
-			<div class="d-flex align-items-center">
-				<button type="button" class="btn btn-link px-3 me-2">Login</button>
-				<button type="button" class="btn btn-primary me-3">
-					Sign up for free
-				</button>
-			</div>
-		</div>
-	</div>
-</nav>
+<header>
+  <div style="display: flex; align-items: center">
+    <img src="/img/logo.png" alt="LOGO" />
+    <nav class="">
+      <div class="">
+        <a class="navbar-brand" href="/">Home</a>
+        <div class="">
+          <ul>
+            <li class="nav-item">
+              <a class="nav-link" href="/about" disabled>About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/hub">Hub</a>
+            </li>
+            <li class="nav-iten">
+              <a href="/pricing" class="nav-link" disabled>Pricing</a>
+            </li>
+            <li class="nav-iten">
+              <a href="/play" class="nav-link" disabled>Kimm Games</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/account" disabled>User</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </div>
+  <div style="align-items: right; padding: 10px; display: flex">
+    <div class="container">
+		<form action="/hub/login" method="get">
+			<input type="hidden" name="type" value="login">
+			<button type="submit">Login!</button>
+		</form>
+    </div>
+    <div class="container">
+		<form action="/hub/login" method="get">
+			<input type="hidden" name="type" value="register">
+			<button type="submit">Register</button>
+		</form>
+    </div>
+  </div>
+</header>
