--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -1,32 +1,17 @@
 <div class="container center">
-  <form action="/hub/login" method="post" class="form" autocomplete="off">
+  <form action="/login" method="post" class="form" autocomplete="off">
     <div class="form-group">
-      <!-- <label for="username">Username</label> -->
       <input
         class="form-control rounded-input center-text"
         type="text"
-        name="username"
-        id="usernameInput"
-        placeholder="Username"
+        name="email"
+        id="emailInput"
+        placeholder="Email"
         required
         focus
       />
     </div>
-    <% if (register) { %>
-        <div class="form-group">
-        <!-- <label for="email">Email</label> -->
-        <input
-            class="form-control rounded-input center-text"
-            type="email"
-            name="email"
-            id="emailInput"
-            placeholder="Email"
-            required
-        />
-        </div>
-    <% } %>
     <div class="form-group">
-      <!-- <label for="password">Password</label> -->
       <input
         class="form-control rounded-input center-text"
         type="password"
@@ -36,20 +21,8 @@
         required
       />
     </div>
-    <% if (register) { %> 
     <div class="form-group">
-      <input
-        class="form-control rounded-input center-text"
-        type="password"
-        name="confirmPassword"
-        id="confirmPasswordInput"
-        placeholder="Confirm Password"
-        required
-      />
-    </div>
-    <% } %> 
-    <div class="form-group">
-      <input type="submit" name="register" />
+      <button type="submit">Login</button>
       <input type="reset" />
     </div>
   </form>
