--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -28,13 +28,13 @@
   </div>
   <div style="align-items: right; padding: 10px; display: flex">
     <div class="container">
-		<form action="/hub/login" method="get">
+		<form action="/login" method="get">
 			<input type="hidden" name="type" value="login">
 			<button type="submit">Login!</button>
 		</form>
     </div>
     <div class="container">
-		<form action="/hub/login" method="get">
+		<form action="/register" method="get">
 			<input type="hidden" name="type" value="register">
 			<button type="submit">Register</button>
 		</form>
