--- a/views/pages/classMenu.ejs
+++ b/views/pages/classMenu.ejs
@@ -1,22 +1,36 @@
 <ul class="cards">
-    <% if (classes) { %>
-      <% classes.forEach(element => { %>
-          <li>
-            <a href="/hub/class/<%= element.id %>" class="card">
-              <img src="<%- element.img %>" class="card__image" alt="<%- element.name %> Image" />
-              <div class="card__overlay">
-                <div class="card__header">
-                  <svg class="card__arc" xmlns="http://www.w3.org/2000/svg"><path /></svg>                     
-                  <img class="card__thumb" src="<%- element.ownerAvatar %>" alt="<%- element.owner %> Avatar" />
-                  <div class="card__header-text">
-                    <h3 class="card__title"><%- element.name %></h3>            
-                    <span class="card__status"><%- element.lastUpdated || 'Data not available' %></span>
-                  </div>
-                </div>
-                <p class="card__description"><%- element.description %></p>
-              </div>
-            </a>      
-          </li>
-      <% }) %>
-      <% } %>
-  </ul>
+  <% if (classes) { %> <% classes.forEach(element => { %>
+  <li>
+    <a href="/hub/class/<%= element._id %>" class="card">
+      <img
+        src="<%- element.classImage %>"
+        class="card__image"
+        alt="<%- element.className %> Image"
+      />
+      <div class="card__overlay">
+        <div class="card__header">
+          <svg class="card__arc" xmlns="http://www.w3.org/2000/svg">
+            <path />
+          </svg>
+          <img
+            class="card__thumb"
+            src="<%- element.ownerAvatar %>"
+            alt="<%- element.owner %> Avatar"
+          />
+          <div class="card__header-text">
+            <h3 class="card__title"><%- element.className %></h3>
+            <span class="card__status"
+              ><%- element.lastUpdated || 'Data not available' %></span
+            >
+          </div>
+        </div>
+        <p class="card__description"><%- element.classDescription %></p>
+      </div>
+    </a>
+  </li>
+  <% }) %> <% } else { %>
+  <li>
+    <p>No classes found</p>
+  </li>
+  <% } %>
+</ul>
