ADDED - Class Menu, Avatar display

--- a/views/pages/addClass.ejs
+++ b/views/pages/addClass.ejs
@@ -9,7 +9,7 @@
         id="nameInput"
         placeholder="Class Name"
         required
-        focus
+        autofocus
       />
     </div>
     <div class="form-group">
