--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -9,7 +9,7 @@
           id="emailInput"
           placeholder="Email"
           required
-          focus
+          autofocus
         />
       </div>
       <div class="form-group">
