--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -16,7 +16,7 @@
               <a href="/pricing" class="nav-link" disabled>Pricing</a>
             </li>
             <li class="nav-iten">
-              <a href="/play" class="nav-link" disabled>Kimm Games</a>
+              <a href="/play" class="nav-link" aria-disabled="true" disabled>Kimm Games</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/account" disabled>User</a>
