--- a/views/layouts/hubLayout.ejs
+++ b/views/layouts/hubLayout.ejs
@@ -1,28 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<%- include('../partials/head.ejs', typeof data !== 'undefined' ? data : {}) %>
-        <link rel="stylesheet" href="/css/hub.css" type="text/css" />
-	</head>
-	<body>
-		<%- include('../partials/navbar.ejs') %>
-        <%- include('../partials/sidebar.ejs') %>
-		<div class="main" id="main">
-            <% if (page == 'main') { %> 
-            <div class="teal">
-                <button class="button teal" onclick="kEdSidebarOpen()" id=""openNav>☰</button>
-                <div class="container">
-                    <h1>
-                        <%= typeof data !== 'undefined' ? data.title : 'Kimm Hub' %>
-                    </h1>
-                </div>
-            </div>
-            <% } %> 
-            <div class="container">
-                <%- body %>
-            </div>
+  <head>
+    <%- include('../partials/head.ejs', typeof data !== 'undefined' ? data : {})
+    %>
+    <link rel="stylesheet" href="/css/hub.css" type="text/css" />
+    <script defer >
+      function kEdSidebarOpen() {
+        document.getElementById("main").style.marginLeft = "25%";
+        document.getElementById("mySidebar").style.width = "25%";
+        document.getElementById("mySidebar").style.display = "block";
+        document.getElementById("openNav").style.display = "none";
+      }
+
+      function kEdSidebarClose() {
+        document.getElementById("main").style.marginLeft = "0%";
+        document.getElementById("mySidebar").style.display = "none";
+        document.getElementById("openNav").style.display = "inline-block";
+      }
+    </script>
+  </head>
+  <body>
+    <%- include('../partials/navbar.ejs') %> <%-
+    include('../partials/sidebar.ejs') %>
+    <div class="main" id="main">
+      <div class="teal">
+        <button class="btn-hub teal" onclick="kEdSidebarOpen()" id="openNav">
+          ☰
+        </button>
+        <div class="container">
+          <h1><%= typeof data !== 'undefined' ? data.title : 'Kimm Hub' %></h1>
         </div>
-		<%- include('../partials/footer.ejs') %>
-        <script src="js/sidebar.js"></script>
-	</body>
+      </div>
+      <%- body %>
+    </div>
+    <%- include('../partials/footer.ejs') %>
+  </body>
 </html>
