--- a/views/pages/hub.ejs
+++ b/views/pages/hub.ejs
@@ -1,4 +1,11 @@
-<div class="white container">
-    <p>Welcome to Kimm Hub!</p>
-
-</div>
+<section>
+    <div class="light-theme container">
+        <p>
+            Kimm Hub is a place to find classes and meet people.
+        </p>
+        <p>
+            <a href="/hub/class/add" class="button">Create a Class</a>
+        </p>
+    
+    </div>
+</section>
