--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -1,11 +1,13 @@
-<div
-  class="sidebar bar-block white"
-  style="display: none; z-index: 2; width: 25%"
-  id="mySidebar"
->
-  <button onclick="kEdSidebarClose()" class="bar-item button">Close</button>
-  <a class="bar-item button" href="/hub/classes">Classes</a>
-  <a class="bar-item button" disabled href="">Calendar</a>
-  <a class="bar-item button" disabled href="">To-do</a>
-  <a class="bar-item button" disabled href="">Settings</a>
-</div>
+<aside>
+  <div
+    class="sidebar bar-block white"
+    style="display: none; z-index: 2; width: 25%"
+    id="mySidebar"
+  >
+    <button onclick="kEdSidebarClose()" class="bar-item button">Close</button>
+    <a class="bar-item btn-hub" href="/hub/classes">Classes</a>
+    <a class="bar-item btn-hub" disabled href="">Calendar</a>
+    <a class="bar-item btn-hub" disabled href="">To-do</a>
+    <a class="bar-item btn-hub" disabled href="">Settings</a>
+  </div>
+</aside>
