--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,5 @@
 * {
   box-sizing: border-box;
-  margin: 0;
   padding: 0;
 }
 
@@ -217,6 +216,7 @@ header div {
   border-radius: 50px;
   text-align: center;
   box-shadow: 2px 2px 3px #999;
+  z-index: 10;
 }
 
 .my-float {
@@ -237,10 +237,8 @@ textarea {
 
 section {
   width: 100%;
-  height: 80vh;
   text-align: center;
-  font-size: 22px;
-  font-weight: 700;
+  min-height: 80vh;
 }
 
 .footer-distributed {
