--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,5 +1,7 @@
-<div>
-    <h1>Kimm</h1>
-    <br>
-    <p>Welcome to Kimm!</p>
-</div>
+<section>
+    <div class="center light-theme">
+        <h1>Kimm</h1>
+        <br>
+        <p>Welcome to Kimm!</p>
+    </div>
+</section>
