--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -20,6 +20,8 @@ content="<%= typeof og.type !== 'undefined' ? og.type : "website" %>" /> <% } %>
 <% if (data) { %> <% data.elements.forEach(e => { %> <% if (e.type == 'css') {
 %>
 <link href="<%= e.path %>" rel="stylesheet" type="text/css" />
+<% } else if (e.type == 'js') { %>
+<script defer src="<%= e.path %>"></script>
 <% } %> <% }) %> <% } %>
 <title>
   <%= typeof pageTitle !== 'undefined' ? pageTitle : "Kimm Education" %>
