--- a/views/layouts/hubLayout.ejs
+++ b/views/layouts/hubLayout.ejs
@@ -20,8 +20,9 @@
     </script>
   </head>
   <body>
-    <%- include('../partials/navbar.ejs') %> <%-
-    include('../partials/sidebar.ejs') %>
+    <%- include('../partials/navbar.ejs') %> 
+    <%- include('../partials/messages.ejs') %>
+    <%- include('../partials/sidebar.ejs') %>
 		
     <div class="main" id="main">
       <div class="teal">
