--- a/views/layouts/hubLayout.ejs
+++ b/views/layouts/hubLayout.ejs
@@ -24,7 +24,7 @@
     <%- include('../partials/messages.ejs') %>
     <%- include('../partials/sidebar.ejs') %>
 		
-    <div class="main" id="main">
+    <main class="main" id="main">
       <div class="teal">
         <button class="btn-hub teal" onclick="kEdSidebarOpen()" id="openNav">
           ☰
@@ -34,7 +34,7 @@
         </div>
       </div>
       <%- body %>
-    </div>
+    </main>
     <%- include('../partials/footer.ejs') %>
   </body>
 </html>
