--- a/views/pages/class.ejs
+++ b/views/pages/class.ejs
@@ -11,7 +11,7 @@
     </div>
   </div>
 </nav>
-<section class="margin-400" id="createPost" hidden>
+<section class="margin-400" id="createPost" style="display: none;">
   <div class="container center">
     <form action="/hub/class/id/<%- id %>/post" method="post" class="form" autocomplete="off">
       <div class="form-group">
@@ -115,7 +115,7 @@
     </div>
   </div>
 </section>
-<section id="members" hidden>
+<section id="members" style="display: none;">
   <div class="container light-theme">
     <h1><%- classroom.className %></h1>
     <div class="row">
@@ -170,24 +170,21 @@
   </div>
 </section>
 
-<section id="settings" hidden>
+<section id="settings" style="display: none;">
   <h1>Settings</h1>
 </section>
 
-<section id="resources" hidden>
+<section id="resources" style="display: none;">
   <div class="container">
     <h1>Resources</h1>
     <!-- Flashcards -->
-    <!-- Button to create flashcard -->
-    <button class="card light-theme" style="text-align:center;" onclick="displaySection('createFlashcard')">
-      <h2>Create a flashcard</h2>
-    </button>
     <!-- Button, redirects to site with classroom flashcards -->
-    <button class="card light-theme" style="text-align:center;" onclick="window.location.href='/hub/class/id/<%- classroom._id %>/flashcards'">
-      <h2>View flashcards</h2>
+    <button class="card light-theme" style="text-align:center;" onclick="window.location.href='/hub/class/id/<%- classroom._id %>/study-sets'">
+      <h2>Manage study sets</h2>
   </div>
 
 </section>
+
 
 <% } %>
 
