--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -3,7 +3,7 @@
 	<head>
 		<%- include('../partials/head.ejs', typeof data !== 'undefined' ? data : {data: false}) %>
 	</head>
-	<body class="bg-secondary">
+	<body class="bg-secondary" style="margin-top:80px;">
 		<%- include('../partials/navbar.ejs') %>
 		<%- include('../partials/messages.ejs') %>
 		<div class="container"><%- body %></div>
