--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -12,13 +12,13 @@
     <div class="footer-left">
 
         <p class="footer-links">
-            <a class="link-1" href="#">Home</a>
+            <a class="link-1" href="/">Home</a>
 
-            <a href="#">Hub</a>
+            <a href="/hub">Hub</a>
 
             <a href="#">Pricing</a>
 
-            <a href="#">About</a>
+            <a href="/about">About</a>
 
             <a href="#">Faq</a>
 
