--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -7,7 +7,7 @@
         <div class="">
           <ul>
             <li class="nav-item">
-              <a class="nav-link" href="/about" disabled>About</a>
+              <a class="nav-link" href="/about">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/hub">Hub</a>
