ADDED - About/Contact Us

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -22,7 +22,7 @@
 
             <a href="#">Faq</a>
 
-            <a href="#">Contact</a>
+            <a href="/contact">Contact</a>
         </p>
 
         <p>Kimm &copy; 2022</p>
