--- a/public/css/studySet.css
+++ b/public/css/studySet.css
@@ -1,35 +1,98 @@
 .flashcard {
-    width: 100%;
-    height: 100%;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: #f5f5f5;
-    border-radius: 10px;
-    box-shadow: 0px 0px 10px #000000;
-    overflow: hidden;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #f5f5f5;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px #000000;
+  overflow: hidden;
 }
 
 .input-group {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .card {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: #f5f5f5;
-    border-radius: 10px;
-    box-shadow: 0px 0px 10px #000000;
-    overflow: hidden;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #f5f5f5;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px #000000;
+  overflow: hidden;
+}
+
+html,
+body {
+  margin: 0;
+  padding: 0;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+}
+@font-face {
+  font-family: Montserrat;
+  src: url("Montserrat-Medium.ttf");
+}
+#activityTitle {
+  text-align: center;
+  font-size: 38px;
+  font-family: Montserrat, Arial;
+  margin-top: 50px;
+}
+#cardArea {
+  width: 300px;
+  height: 200px;
+  margin: auto;
+  margin-top: 80px;
+  border: 3px solid #abb7b7;
+  border-radius: 5px;
+  position: relative;
+  overflow: hidden;
+}
+.card {
+  width: 300px;
+  height: 200px;
+  position: absolute;
+  text-align: center;
+  line-height: 200px;
+  font-size: 45px;
+  color: #efefef;
+  font-family: Montserrat, Arial;
+  cursor: pointer;
+}
+#nextButton {
+  width: 80px;
+  text-align: center;
+  font-size: 20px;
+  padding: 10px;
+  cursor: pointer;
+  color: #efefef;
+  margin: auto;
+  margin-top: 30px;
+  background-color: #019875;
+  border: 2px solid #1e824c;
+  border-radius: 5px;
+  font-family: Montserrat, Arial;
+}
+#nextButton:hover {
+  opacity: 0.6;
+}
+#finalMessage {
+  text-align: center;
+  font-size: 30px;
+  margin-top: 30px;
+  font-family: Montserrat, Arial;
 }
