--- a/views/pages/studySet.ejs
+++ b/views/pages/studySet.ejs
@@ -1,11 +1,11 @@
-<div class="container card">
-    <h1><%= studyset.name %></h1>
-    <h2><%= studyset.description %></h2>
-    <% studyset.flashcards.forEach(flashcard => { %>
-        <p>Term: <%= flashcard.term %></p>
-        <p>Definition: <%= flashcard.definition %></p>
-        <p>Interchangeable: <%= flashcard.interchangeable %></p>
-        <hr>
-        <p>AuthorId: <%= flashcard.setAuthor %></p>
-    <% }) %> 
-</div>
+<section class="studyset">
+    <div class="container">
+        <h1 id="activity-title" ></h1>
+    </div>
+    <!-- TODO: Toggle description -->
+    <h2 id="studyset-description"></h2>
+
+    <div id="card-area"></div>
+    <div id="button-area"></div>
+
+</section>
