--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -19,7 +19,7 @@
               <a href="/play" class="nav-link" aria-disabled="true" disabled>Kimm Games</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/account" disabled>User</a>
+              <a class="nav-link" href="/contact">Contact Us</a>
             </li>
           </ul>
       </div>
