--- a/views/pages/class.ejs
+++ b/views/pages/class.ejs
@@ -56,7 +56,7 @@
   <div class="row">
     <div class="leftcolumn">
       <!-- Special card to create a post/card -->
-      <button class="card light-theme" style="text-align:center;" onclick="displaySection('createPost')">
+      <button class="card light-theme" style="text-align:center; width: 100%;" onclick="displaySection('createPost')">
         <h2>Post something to your class!</h2>
       </button>
       <% if (!cards) { %>
