ADDED - Calendar (No DB)

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,31 +1,28 @@
 <footer class="footer-distributed">
+  <div class="footer-right">
+    <a href="#"><i class="fa fa-facebook"></i></a>
+    <a href="https://www.instagram.com/kimmeducation/" target="blank"
+      ><i class="fa fa-instagram"></i
+    ></a>
+    <a href="#"><i class="fa fa-linkedin"></i></a>
+    <a href="#"><i class="fa fa-github"></i></a>
+  </div>
 
-    <div class="footer-right">
+  <div class="footer-left">
+    <p class="footer-links">
+      <a class="link-1" href="/">Home</a>
 
-        <a href="#"><i class="fa fa-facebook"></i></a>
-        <a href="#"><i class="fa fa-twitter"></i></a>
-        <a href="#"><i class="fa fa-linkedin"></i></a>
-        <a href="#"><i class="fa fa-github"></i></a>
+      <a href="/hub">Hub</a>
 
-    </div>
+      <a href="#">Pricing</a>
 
-    <div class="footer-left">
+      <a href="/about">About</a>
 
-        <p class="footer-links">
-            <a class="link-1" href="/">Home</a>
+      <a href="#">Faq</a>
 
-            <a href="/hub">Hub</a>
+      <a href="/contact">Contact</a>
+    </p>
 
-            <a href="#">Pricing</a>
-
-            <a href="/about">About</a>
-
-            <a href="#">Faq</a>
-
-            <a href="/contact">Contact</a>
-        </p>
-
-        <p>Kimm &copy; 2022</p>
-    </div>
-
+    <p>Kimm &copy; 2022</p>
+  </div>
 </footer>
