--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -6,8 +6,8 @@
   >
     <button onclick="kEdSidebarClose()" class="bar-item button">Close</button>
     <a class="bar-item btn-hub" href="/hub/classes">Classes</a>
-    <a class="bar-item btn-hub" disabled href="">Calendar</a>
-    <a class="bar-item btn-hub" disabled href="">To-do</a>
+    <a class="bar-item btn-hub" href="/hub/calendar">Calendar</a>
+    <a class="bar-item btn-hub" href="/hub/todo">To-do</a>
     <a class="bar-item btn-hub" disabled href="">Settings</a>
   </div>
 </aside>
