--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -17,6 +17,7 @@ typeof og.url !== 'undefined' ? og.url : "" %>" /> <meta property="og:type"
 content="<%= typeof og.type !== 'undefined' ? og.type : "website" %>" /> <% } %>
 <link rel="icon" href="/img/logo.png" />
 <link href="/css/style.css" rel="stylesheet" type="text/css" />
+<script src="https://kit.fontawesome.com/29ee0bc57e.js" crossorigin="anonymous"></script>
 <% if (data) { %> <% data.elements.forEach(e => { %> <% if (e.type == 'css') {
 %>
 <link href="<%= e.path %>" rel="stylesheet" type="text/css" />
