--- a/public/css/studySet.css
+++ b/public/css/studySet.css
@@ -7,8 +7,7 @@
 }
 #activity-title {
   text-align: center;
-  font-size: 1.4rem;
-  margin-top: 2rem;
+  margin-top: 2em;
 }
 #card-area {
   width: 70%;
@@ -19,30 +18,23 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 2rem;
   cursor: pointer;
   word-wrap: normal;
   text-overflow: clip;
 }
-/* .card-text {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  margin: 0;
-  text-align: center;
-} */
+
+.card-text {
+  padding : 1em;
+}
 #next-button {
   width: 80px;
   text-align: center;
-  font-size: 20px;
+  font-size: 1.25vw;
   padding: 10px;
   cursor: pointer;
   color: #efefef;
   margin: auto;
-  margin-top: 30px;
+  margin-top: 1.875em;
   background-color: #019875;
   border: 2px solid #1e824c;
   border-radius: 5px;
@@ -52,6 +44,59 @@
 }
 #final-message {
   text-align: center;
-  font-size: 30px;
-  margin-top: 30px;
+  font-size: 1.875vw;
+  margin-top: 1.875em;
+}
+
+@media screen and (min-with: 601px) {
+  #activity-title {
+    font-size: 2.5em;
+  }
+  .card-text {
+    font-size: 1.25em;
+    color:#019875;
+  }
+  #next-button {
+    width: 100px;
+  }
+  #final-message {
+    font-size: 1.25em;
+  }
+}
+
+@media screen and (max-width: 600) {
+  #activity-title {
+    font-size: 1.5em;
+  }
+  #card-area {
+    width: 95%;
+  }
+  .card-text{
+    font-size: 1em;
+  }
+  #next-button {
+    font-size: 1em;
+  }
+  #final-message {
+    font-size: 1em;
+  }
+}
+
+@media screen and (min-with: 800px) {
+  #activity-title {
+    font-size: 3em;
+  }
+  #card-area {
+    width: 70%;
+  }
+  .card-text {
+    font-size: 3em;
+  }
+  #next-button {
+    font-size: 1.5em;
+  }
+  #final-message {
+    font-size: 1.5em;
+  }
+  
 }
