--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -5,9 +5,9 @@
     id="mySidebar"
   >
     <button onclick="kEdSidebarClose()" class="bar-item button">Close</button>
-    <a class="bar-item btn-hub" href="/hub/classes">Classes</a>
-    <a class="bar-item btn-hub" href="/hub/calendar">Calendar</a>
-    <a class="bar-item btn-hub" href="/hub/todo">To-do</a>
+    <a class="bar-item btn-hub" href="/hub/<%= id %>/classes">Classes</a>
+    <a class="bar-item btn-hub" href="/hub/<%= id %>/calendar">Calendar</a>
+    <a class="bar-item btn-hub" href="/hub/<%= id %>/todo">To-do</a>
     <a class="bar-item btn-hub" disabled href="">Settings</a>
   </div>
 </aside>
