--- a/views/pages/hub/todoList.ejs
+++ b/views/pages/hub/todoList.ejs
@@ -1,7 +1,7 @@
 <section style="padding: 0;">
     <div id="todo-header">
       <h1>Todo List</h1>
-      <input type="text" id="todo-input" placeholder="Things to be done..." />
+      <input type="text" id="todo-input" minlength="5" maxlength="50" placeholder="Things to be done..." />
       <span class="add-btn" id="add-button">Add</span>
     </div>
     <ul id="todo-ul">
